--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width" />
     <title>DOM Lab</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <header>
+      <nav id="top-menu"></nav>
+      <!-- Add the <nav> element below -->
+      <nav id="sub-menu"></nav>
+    </header>
   </head>
 
   <body>
-    <header>
-      <nav id="top-menu"></nav>
-    </header>
     <main class="flex-ctr"></main>
     <script src="script.js"></script>
   </body>
